force-app/main/default/objects/Email__c/Email__c.object-meta.xml
<CustomObject>
    <label>Email</label>
    <nameField>
        <displayFormat>EM-{00000}</displayFormat>
        <label>EMAIL Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Emails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>