force-app/main/default/objects/Email__c/fields/CandidateName__c.field-meta.xml
<CustomField>
    <fullName>CandidateName__c</fullName>
    <label>CandidateName</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Candidate Emails</relationshipLabel>
    <relationshipName>Emails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>