force-app/main/default/objects/Email__c/fields/Last_Web_Login__c.field-meta.xml
<CustomField>
    <fullName>Last_Web_Login__c</fullName>
    <label>Last Web Login</label>
    <type>DateTime</type>
</CustomField>