force-app/main/default/objects/Email__c/fields/Ph_Status__c.field-meta.xml
<CustomField>
    <fullName>Ph_Status__c</fullName>
    <label>Ph_Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
                <default>true</default>
                <label>Valid</label>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>