force-app/main/default/objects/Email__c/fields/Ph_Type__c.field-meta.xml
<CustomField>
    <fullName>Ph_Type__c</fullName>
    <label>Ph Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B|Business</fullName>
            </value>
            <value>
                <fullName>P|Personal</fullName>
            </value>
            <value>
                <fullName>U|Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>